proc.c: fix for uncallable method

* proc.c (method_super_method): uncallable method entry does not
  have the defined class, use the owner instead.
  [ruby-core:70254] [Bug #11419]
* test/ruby/test_method.rb (test_super_method_unbound): add test
  by Akira Matsuda.

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@51501 b2dd03c8-39d4-4d8f-98ff-823fe69b080e